@@ -11,9 +11,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Slf4j
 @Service
@@ -21,138 +24,231 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class EnrollmentService {
 
+    private static final List<Enrollment.Status> OPEN_LOAN_STATUSES = List.of(
+            Enrollment.Status.PENDING,
+            Enrollment.Status.ACTIVE,
+            Enrollment.Status.RETURN_REQUESTED
+    );
+
     private final EnrollmentRepository enrollmentRepository;
     private final CourseServiceClient courseServiceClient;
     private final PaymentServiceClient paymentServiceClient;
+    private final MemberServiceClient memberServiceClient;
     private final EnrollmentKafkaProducer kafkaProducer;
     private final EnrollmentWriteService enrollmentWriteService;
 
-    /** 기존 수강신청 API를 교보재 대여 신청으로 사용한다. */
-    public EnrollmentDto.EnrollmentResponse enroll(Long userId, Long courseId, String reason) {
-        if (!courseServiceClient.existsCourse(courseId)) {
-            throw new IllegalArgumentException("존재하지 않는 교보재입니다: " + courseId);
+    @Transactional
+    public EnrollmentDto.EnrollmentResponse enroll(
+            Long userId,
+            EnrollmentDto.EnrollRequest request) {
+        memberServiceClient.assertMember(request.getGroupId(), userId);
+
+        if (!courseServiceClient.existsCourse(request.getCourseId())) {
+            throw new IllegalArgumentException("존재하지 않는 자산입니다: " + request.getCourseId());
         }
 
-        Map<String, Object> courseInfo = courseServiceClient.getCourse(courseId);
-        if (!"OWNED".equals(stringValue(courseInfo.get("itemType")))
-                || !"ACTIVE".equals(stringValue(courseInfo.get("status")))) {
-            throw new IllegalArgumentException("대여할 수 있는 교보재가 아닙니다");
-        }
-        if (toInteger(courseInfo.get("availableQuantity")) <= 0) {
-            throw new IllegalStateException("현재 대여 가능한 수량이 없습니다");
-        }
-        if (enrollmentRepository.existsByUserIdAndCourseId(userId, courseId)) {
-            throw new IllegalArgumentException("이미 신청한 교보재입니다");
+        Map<String, Object> courseInfo = courseServiceClient.getCourse(request.getCourseId());
+        validateBorrowableAsset(request, courseInfo);
+
+        if (enrollmentRepository.existsByUserIdAndCourseIdAndStatusIn(
+                userId, request.getCourseId(), OPEN_LOAN_STATUSES)) {
+            throw new IllegalArgumentException("이미 신청했거나 대여 중인 자산입니다");
         }
 
         Enrollment enrollment = enrollmentWriteService.createPendingEnrollment(
                 userId,
-                courseId,
+                request.getCourseId(),
+                request.getGroupId(),
                 Enrollment.RequestType.LOAN,
-                reason
+                request.getReason(),
+                request.getRequestedFrom(),
+                request.getDueDate()
         );
 
-        log.info("[EnrollmentService] 교보재 대여 신청 완료 - enrollmentId: {}", enrollment.getId());
+        publishLifecycle("REQUESTED", enrollment, courseInfo);
         return EnrollmentDto.EnrollmentResponse.from(enrollment, toCourseSummary(courseInfo));
     }
 
-    /** 신규 교보재 구매요청: 비공개 Course + Enrollment + PENDING Payment를 만든다. */
-    public EnrollmentDto.EnrollmentResponse requestPurchase(
+    @Transactional
+    public EnrollmentDto.EnrollmentResponse requestAcquisition(
             Long userId,
             EnrollmentDto.PurchaseRequest request) {
+        memberServiceClient.assertMember(request.getGroupId(), userId);
+
         Map<String, Object> courseInfo = courseServiceClient.createPurchaseCourse(userId, request);
         Long courseId = toLong(courseInfo.get("id"));
 
         Enrollment enrollment = enrollmentWriteService.createPendingEnrollment(
                 userId,
                 courseId,
+                request.getGroupId(),
                 Enrollment.RequestType.PURCHASE,
-                request.getReason()
+                request.getReason(),
+                null,
+                null
         );
 
-        BigDecimal totalAmount = request.getUnitPrice()
-                .multiply(BigDecimal.valueOf(request.getQuantity().longValue()));
-        paymentServiceClient.requestPayment(userId, courseId, totalAmount);
-
-        log.info("[EnrollmentService] 신규 교보재 구매요청 완료 - enrollmentId: {}, totalAmount: {}",
-                enrollment.getId(), totalAmount);
+        log.info("[EnrollmentService] 미보유 장비 도입 요청 - requestId: {}, groupId: {}",
+                enrollment.getId(), request.getGroupId());
         return EnrollmentDto.EnrollmentResponse.from(enrollment, toCourseSummary(courseInfo));
     }
 
-    /** 운영진의 대여 승인. 구매요청 승인은 Payment Service에서 처리한다. */
     @Transactional
-    public EnrollmentDto.EnrollmentResponse approveLoan(Long enrollmentId) {
+    public EnrollmentDto.EnrollmentResponse approveLoan(Long enrollmentId, Long reviewerId) {
         Enrollment enrollment = findEnrollment(enrollmentId);
-        if (enrollment.getRequestType() != Enrollment.RequestType.LOAN) {
-            throw new IllegalArgumentException("대여 신청만 이 API에서 승인할 수 있습니다");
-        }
+        assertType(enrollment, Enrollment.RequestType.LOAN);
+        memberServiceClient.assertManager(enrollment.getGroupId(), reviewerId);
+
         if (enrollment.getStatus() == Enrollment.Status.ACTIVE) {
             return toResponseWithCourse(enrollment);
         }
 
+        Map<String, Object> courseInfo = courseServiceClient.getCourse(enrollment.getCourseId());
         courseServiceClient.borrowCourse(enrollment.getCourseId());
-        enrollment.activate();
+        enrollment.activate(reviewerId);
         publishCompleted(enrollment);
-        return toResponseWithCourse(enrollment);
+        publishLifecycle("APPROVED", enrollment, courseInfo);
+        return EnrollmentDto.EnrollmentResponse.from(enrollment, toCourseSummary(courseInfo));
     }
 
     @Transactional
-    public EnrollmentDto.EnrollmentResponse rejectLoan(Long enrollmentId, String reviewComment) {
+    public EnrollmentDto.EnrollmentResponse rejectRequest(
+            Long enrollmentId,
+            Long reviewerId,
+            String reviewComment) {
         if (reviewComment == null || reviewComment.isBlank()) {
             throw new IllegalArgumentException("반려 사유를 입력해 주세요");
         }
 
         Enrollment enrollment = findEnrollment(enrollmentId);
-        if (enrollment.getRequestType() != Enrollment.RequestType.LOAN) {
-            throw new IllegalArgumentException("대여 신청만 이 API에서 반려할 수 있습니다");
+        memberServiceClient.assertManager(enrollment.getGroupId(), reviewerId);
+        enrollment.reject(reviewComment.trim());
+
+        if (enrollment.getRequestType() == Enrollment.RequestType.LOAN) {
+            publishLifecycle("REJECTED", enrollment, courseServiceClient.getCourse(enrollment.getCourseId()));
         }
-        enrollment.reject(reviewComment);
         return toResponseWithCourse(enrollment);
     }
 
-    /** payment.completed 이벤트를 예산 검토 완료 이벤트로 해석한다. */
     @Transactional
-    public void handleBudgetReview(Long userId, Long courseId, String status) {
-        Enrollment enrollment = enrollmentRepository.findByUserIdAndCourseId(userId, courseId)
-                .orElseThrow(() -> new IllegalArgumentException(
-                        "구매요청 정보를 찾을 수 없습니다 - userId: " + userId + ", courseId: " + courseId));
+    public EnrollmentDto.EnrollmentResponse approveAcquisition(
+            Long enrollmentId,
+            Long reviewerId) {
+        Enrollment enrollment = findEnrollment(enrollmentId);
+        assertType(enrollment, Enrollment.RequestType.PURCHASE);
+        memberServiceClient.assertManager(enrollment.getGroupId(), reviewerId);
 
-        if (enrollment.getRequestType() != Enrollment.RequestType.PURCHASE) {
-            throw new IllegalArgumentException("구매요청이 아닌 신청입니다");
+        if (enrollment.getStatus() == Enrollment.Status.GROUP_APPROVED) {
+            return toResponseWithCourse(enrollment);
         }
 
+        Map<String, Object> courseInfo = courseServiceClient.getCourse(enrollment.getCourseId());
+        enrollment.approveGroup(reviewerId);
+
+        BigDecimal amount = toBigDecimal(courseInfo.get("price"))
+                .multiply(BigDecimal.valueOf(toInteger(courseInfo.get("totalQuantity"))));
+        paymentServiceClient.requestPayment(
+                enrollment.getUserId(),
+                enrollment.getCourseId(),
+                enrollment.getId(),
+                enrollment.getGroupId(),
+                amount
+        );
+        return EnrollmentDto.EnrollmentResponse.from(enrollment, toCourseSummary(courseInfo));
+    }
+
+    @Transactional
+    public EnrollmentDto.EnrollmentResponse requestReturn(Long enrollmentId, Long userId) {
+        Enrollment enrollment = findEnrollment(enrollmentId);
+        assertType(enrollment, Enrollment.RequestType.LOAN);
+        if (!enrollment.getUserId().equals(userId)) {
+            throw new IllegalStateException("본인의 대여 건만 반납 요청할 수 있습니다");
+        }
+        enrollment.requestReturn();
+        Map<String, Object> courseInfo = courseServiceClient.getCourse(enrollment.getCourseId());
+        publishLifecycle("RETURN_REQUESTED", enrollment, courseInfo);
+        return EnrollmentDto.EnrollmentResponse.from(enrollment, toCourseSummary(courseInfo));
+    }
+
+    @Transactional
+    public EnrollmentDto.EnrollmentResponse confirmReturn(
+            Long enrollmentId,
+            Long reviewerId) {
+        Enrollment enrollment = findEnrollment(enrollmentId);
+        assertType(enrollment, Enrollment.RequestType.LOAN);
+        memberServiceClient.assertManager(enrollment.getGroupId(), reviewerId);
+
+        Map<String, Object> courseInfo = courseServiceClient.getCourse(enrollment.getCourseId());
+        courseServiceClient.returnCourse(enrollment.getCourseId());
+        enrollment.completeReturn(reviewerId);
+        publishLifecycle("RETURNED", enrollment, courseInfo);
+        return EnrollmentDto.EnrollmentResponse.from(enrollment, toCourseSummary(courseInfo));
+    }
+
+    @Transactional
+    public EnrollmentDto.EnrollmentResponse receiveAcquisition(
+            Long enrollmentId,
+            Long reviewerId,
+            EnrollmentDto.ReceiveRequest request) {
+        Enrollment enrollment = findEnrollment(enrollmentId);
+        assertType(enrollment, Enrollment.RequestType.PURCHASE);
+        memberServiceClient.assertManager(enrollment.getGroupId(), reviewerId);
+
+        Map<String, Object> courseInfo = courseServiceClient.receiveCourse(
+                enrollment.getCourseId(), request);
+        enrollment.markReceived(reviewerId);
+        return EnrollmentDto.EnrollmentResponse.from(enrollment, toCourseSummary(courseInfo));
+    }
+
+    @Transactional
+    public void handleBudgetReview(
+            Long requestId,
+            Long userId,
+            Long courseId,
+            String status) {
+        Enrollment enrollment = requestId != null
+                ? findEnrollment(requestId)
+                : enrollmentRepository
+                        .findFirstByUserIdAndCourseIdAndRequestTypeOrderByCreatedAtDesc(
+                                userId, courseId, Enrollment.RequestType.PURCHASE)
+                        .orElseThrow(() -> new IllegalArgumentException("도입 요청 정보를 찾을 수 없습니다"));
+
+        assertType(enrollment, Enrollment.RequestType.PURCHASE);
         if ("COMPLETED".equals(status)) {
-            if (enrollment.getStatus() == Enrollment.Status.ACTIVE) {
-                return;
+            if (enrollment.getStatus() != Enrollment.Status.BUDGET_APPROVED) {
+                enrollment.approveBudget();
             }
-            enrollment.activate();
-            publishCompleted(enrollment);
-            log.info("[EnrollmentService] 구매요청 예산 승인 - enrollmentId: {}", enrollment.getId());
+            log.info("[EnrollmentService] 도입 예산 승인 - requestId: {}", enrollment.getId());
             return;
         }
 
-        if ("FAILED".equals(status)) {
-            if (enrollment.getStatus() == Enrollment.Status.REJECTED) {
-                return;
-            }
-            enrollment.reject("운영진 예산 검토에서 반려되었습니다");
-            log.info("[EnrollmentService] 구매요청 예산 반려 - enrollmentId: {}", enrollment.getId());
+        if ("FAILED".equals(status) && enrollment.getStatus() != Enrollment.Status.REJECTED) {
+            enrollment.reject("학교 예산 검토에서 반려되었습니다");
+            log.info("[EnrollmentService] 도입 예산 반려 - requestId: {}", enrollment.getId());
         }
     }
 
-    public List<EnrollmentDto.EnrollmentResponse> getEnrollmentsByUser(Long userId) {
-        return enrollmentRepository.findByUserId(userId).stream()
-                .map(this::toResponseWithCourse)
-                .collect(Collectors.toList());
+    public List<EnrollmentDto.EnrollmentResponse> getEnrollmentsByUser(
+            Long userId,
+            Long groupId) {
+        List<Enrollment> enrollments = groupId == null
+                ? enrollmentRepository.findByUserId(userId)
+                : enrollmentRepository.findByUserIdAndGroupId(userId, groupId);
+        return enrollments.stream().map(this::toResponseWithCourse).toList();
     }
 
-    public List<EnrollmentDto.EnrollmentResponse> getPendingEnrollments(
-            Enrollment.RequestType requestType) {
+    public List<EnrollmentDto.EnrollmentResponse> getGroupRequests(
+            Long groupId,
+            Enrollment.RequestType requestType,
+            Enrollment.Status status,
+            Long requesterId) {
+        memberServiceClient.assertManager(groupId, requesterId);
         return enrollmentRepository
-                .findByStatusAndRequestType(Enrollment.Status.PENDING, requestType)
+                .findByGroupIdAndRequestTypeAndStatusOrderByCreatedAtDesc(
+                        groupId, requestType, status)
                 .stream()
                 .map(this::toResponseWithCourse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EnrollmentDto.EnrollmentHistoryResponse getEnrollmentHistory(Long userId) {
@@ -161,12 +257,39 @@ public class EnrollmentService {
                 .stream()
                 .filter(enrollment -> enrollment.getRequestType() == Enrollment.RequestType.LOAN)
                 .map(Enrollment::getCourseId)
-                .collect(Collectors.toList());
+                .toList();
 
         return EnrollmentDto.EnrollmentHistoryResponse.builder()
                 .userId(userId)
                 .activeCourseIds(activeCourseIds)
                 .build();
+    }
+
+    private void validateBorrowableAsset(
+            EnrollmentDto.EnrollRequest request,
+            Map<String, Object> courseInfo) {
+        if (!"OWNED".equals(stringValue(courseInfo.get("itemType")))
+                || !"ACTIVE".equals(stringValue(courseInfo.get("status")))) {
+            throw new IllegalArgumentException("대여할 수 있는 자산이 아닙니다");
+        }
+        if (toInteger(courseInfo.get("availableQuantity")) <= 0) {
+            throw new IllegalStateException("현재 대여 가능한 수량이 없습니다");
+        }
+
+        String visibility = stringValue(courseInfo.get("visibility"));
+        Long ownerGroupId = toLong(courseInfo.get("ownerGroupId"));
+        if ("GROUP".equals(visibility) && !request.getGroupId().equals(ownerGroupId)) {
+            throw new IllegalStateException("다른 그룹의 전용 자산은 대여할 수 없습니다");
+        }
+
+        if (request.getDueDate().isBefore(request.getRequestedFrom())) {
+            throw new IllegalArgumentException("반납 예정일은 대여 시작일 이후여야 합니다");
+        }
+        long loanDays = ChronoUnit.DAYS.between(request.getRequestedFrom(), request.getDueDate()) + 1;
+        int maxLoanDays = Math.max(1, toInteger(courseInfo.get("maxLoanDays")));
+        if (loanDays > maxLoanDays) {
+            throw new IllegalArgumentException("이 자산은 최대 " + maxLoanDays + "일까지 대여할 수 있습니다");
+        }
     }
 
     private EnrollmentDto.EnrollmentResponse toResponseWithCourse(Enrollment enrollment) {
@@ -192,6 +315,10 @@ public class EnrollmentService {
                 .totalQuantity(toInteger(courseInfo.get("totalQuantity")))
                 .availableQuantity(toInteger(courseInfo.get("availableQuantity")))
                 .purchaseUrl(stringValue(courseInfo.get("purchaseUrl")))
+                .ownerGroupId(toLong(courseInfo.get("ownerGroupId")))
+                .visibility(stringValue(courseInfo.get("visibility")))
+                .pickupLocation(stringValue(courseInfo.get("pickupLocation")))
+                .maxLoanDays(toInteger(courseInfo.get("maxLoanDays")))
                 .build();
     }
 
@@ -205,9 +332,36 @@ public class EnrollmentService {
         );
     }
 
+    private void publishLifecycle(
+            String eventType,
+            Enrollment enrollment,
+            Map<String, Object> courseInfo) {
+        kafkaProducer.publishRentalLifecycle(KafkaEvent.RentalLifecycleEvent.builder()
+                .eventId(UUID.randomUUID().toString())
+                .eventType(eventType)
+                .occurredAt(LocalDateTime.now())
+                .requestId(enrollment.getId())
+                .userId(enrollment.getUserId())
+                .groupId(enrollment.getGroupId())
+                .assetId(enrollment.getCourseId())
+                .category(stringValue(courseInfo.get("category")))
+                .quantity(1)
+                .requestedFrom(enrollment.getRequestedFrom())
+                .dueDate(enrollment.getDueDate())
+                .returnedAt(enrollment.getReturnedAt())
+                .build());
+    }
+
     private Enrollment findEnrollment(Long enrollmentId) {
         return enrollmentRepository.findById(enrollmentId)
-                .orElseThrow(() -> new IllegalArgumentException("신청 정보를 찾을 수 없습니다: " + enrollmentId));
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "신청 정보를 찾을 수 없습니다: " + enrollmentId));
+    }
+
+    private void assertType(Enrollment enrollment, Enrollment.RequestType requestType) {
+        if (enrollment.getRequestType() != requestType) {
+            throw new IllegalArgumentException("요청 유형이 올바르지 않습니다");
+        }
     }
 
     private String normalizeCategory(String category) {
@@ -217,8 +371,10 @@ public class EnrollmentService {
             case "COMPUTER" -> "컴퓨터";
             case "SERVER_CLOUD", "DEVOPS" -> "서버·클라우드";
             case "ELECTRONICS_IOT" -> "전자·IoT";
-            case "MAKER" -> "메이커·건축";
+            case "MAKER" -> "메이커·공학";
             case "CAMERA_AUDIO" -> "촬영·음향";
+            case "PRESENTATION" -> "발표·행사";
+            case "ACCESSORY" -> "부속품";
             case "BACKEND" -> "개발장비";
             case "FRONTEND" -> "디자인장비";
             case "DATA_SCIENCE" -> "데이터장비";
